--- a/portfolio.html
+++ b/portfolio.html
@@ -60,214 +60,214 @@
   </header>
     <!-- Основний контент сторінки Портфоліо-->
     <main>
-      <section class="main-section list-nav">
+      <section class="portfolio portfolio--size">
         <div class="container">
           <h1 class="visually-hidden">Фільтр портфоліо</h1>
           <ul class="filter-list list">
-            <li class="filter-item">
-              <button class="filter-btn" type="button">Усі</button>
+            <li class="filter-list__item">
+              <button class="filter-list__btn" type="button">Усі</button>
             </li>
-            <li class="filter-item">
-              <button class="filter-btn" type="button">Веб-сайти</button>
+            <li class="filter___item">
+              <button class="filter-list__btn" type="button">Веб-сайти</button>
             </li>
-            <li class="filter-item">
-              <button class="filter-btn" type="button">Додатки</button>
+            <li class="filter-list__item">
+              <button class="filter-list__btn" type="button">Додатки</button>
             </li>
-            <li class="filter-item">
-              <button class="filter-btn" type="button">Дизайн</button>
+            <li class="filter-list__item">
+              <button class="filter-list__btn" type="button">Дизайн</button>
             </li>
-            <li class="filter-item">
-              <button class="filter-btn" type="button">Маркетинг</button>
+            <li class="filter-list__item">
+              <button class="filter-list__btn" type="button">Маркетинг</button>
             </li>
           </ul>
             <h2 class="visually-hidden">Список портфоліо</h2>
           <ul class="portfolio-list list">
-            <li class="portfolio-item">
-              <div class="portfolio-thumb">
-                <a class="portfolio-link link" href=""> 
+            <li class="portfolio-list__item">
+              <div class="portfolio-list__thumb">
+                <a class="portfolio-list__link link" href=""> 
                   <img
                   src="images/portfol1.jpg"
                   alt="Портфоліо 1"
                   height="294"
                   width="370"
                 />
-                <div class="portfolio-overlay">
-                <p class="portfolio-meta">
+                <div class="portfolio-list__overlay">
+                <p class="portfolio-list__meta">
                   Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
                 </p>
               </div>
               </div>
-                <div class="work-projects">
-                <h2 class="project">Технокряк</h2>
-                <p class="worktitle">Веб-сайт</p>
+                <div class="portfolio-list__projects">
+                <h2 class="portfolio-list__name">Технокряк</h2>
+                <p class="portfolio-list__worktitle">Веб-сайт</p>
               </div> 
               </a>
               </li>
-            <li class="portfolio-item">
-              <div class="portfolio-thumb">
-              <a class="portfolio-link link" href="">
+            <li class="portfolio-list__item">
+              <div class="portfolio-list__thumb">
+              <a class="portfolio-list__link link" href="">
                 <img
                 src="images/portfol2.jpg"
                 alt="Портфоліо 2"
                 height="294"
                 width="370"
               />
-              <div class="portfolio-overlay">
-                <p class="portfolio-meta">
+              <div class="portfolio-list__overlay">
+                <p class="portfolio-list__meta">
                   Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
                 </p>
                 </div>
             </div>
-              <div class="work-projects">
-                <h2 class="project">Постер New Orlean vs Golden Star</h2>
-                <p class="worktitle">Дизайн</p>
+              <div class="portfolio-list__projects">
+                <h2 class="portfolio-list__name">Постер New Orlean vs Golden Star</h2>
+                <p class="portfolio-list__worktitle">Дизайн</p>
               </div>
               </a>
               </li>
-            <li class="portfolio-item">
-              <div class="portfolio-thumb">
-              <a class="portfolio-link link" href="">
+            <li class="portfolio-list__item">
+              <div class="portfolio-list__thumb">
+              <a class="portfolio-list__link link" href="">
                 <img
                 src="images/portfol3.jpg"
                 alt="Портфоліо 3"
                 height="294"
                 width="370"
               />
-              <div class="portfolio-overlay">
-                <p class="portfolio-meta">
+              <div class="portfolio-list__overlay">
+                <p class="portfolio-list__meta">
                   Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
                 </p>
                 </div>
             </div>
-              <div class="work-projects">
-                <h2 class="project">Ресторан Seafood</h2>
-                <p class="worktitle">Додаток</p>
+              <div class="portfolio-list__projects">
+                <h2 class="portfolio-list__name">Ресторан Seafood</h2>
+                <p class="portfolio-list__worktitle">Додаток</p>
               </div>
               </a>
               </li>
-            <li class="portfolio-item">
-              <div class="portfolio-thumb">
-              <a class="portfolio-link link" href="">
+            <li class="portfolio-list__item">
+              <div class="portfolio-list__thumb">
+              <a class="portfolio-list__link link" href="">
                 <img
                 src="images/portfol4.jpg"
                 alt="Портфоліо 4"
                 height="294"
                 width="370"
               />
-              <div class="portfolio-overlay">
-                <p class="portfolio-meta">
+              <div class="portfolio-list__overlay">
+                <p class="portfolio-list__meta">
                   Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
                 </p>
               </div>
             </div>
-              <div class="work-projects">
-                <h2 class="project">Проєкт Prime</h2>
-                <p class="worktitle">Маркетинг</p>
+              <div class="portfolio-list__projects">
+                <h2 class="portfolio-list__name">Проєкт Prime</h2>
+                <p class="portfolio-list__worktitle">Маркетинг</p>
               </div>
               </a>
               </li>
-            <li class="portfolio-item">
-              <div class="portfolio-thumb">
-              <a class="portfolio-link link" href="">
+            <li class="portfolio-list__item">
+              <div class="portfolio-list__thumb">
+              <a class="portfolio-list__link link" href="">
                 <img
                 src="images/portfol5.jpg"
                 alt="Портфоліо 5"
                 height="294"
                 width="370"
               />
-              <div class="portfolio-overlay">
-                <p class="portfolio-meta">
+              <div class="portfolio-list__overlay">
+                <p class="portfolio-list__meta">
                   Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
                 </p>
                 </div>
             </div>
-              <div class="work-projects">
-                <h2 class="project">Проєкт Boxes</h2>
-                <p class="worktitle">Додаток</p>  
+              <div class="portfolio-list__projects">
+                <h2 class="portfolio-list__name">Проєкт Boxes</h2>
+                <p class="portfolio-list__worktitle">Додаток</p>  
               </div>
               </a>
               </li>
-            <li class="portfolio-item">
-              <div class="portfolio-thumb">
-              <a class="portfolio-link link" href=""> 
+            <li class="portfolio-list__item">
+              <div class="portfolio-list__thumb">
+              <a class="portfolio-list__link link" href=""> 
                 <img
                 src="images/portfol6.jpg"
                 alt="Портфоліо 6"
                 height="294"
                 width="370"
               />
-              <div class="portfolio-overlay">
-                <p class="portfolio-meta">
+              <div class="portfolio-list__overlay">
+                <p class="portfolio-list__meta">
                   Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
                 </p>
                 </div>
             </div>
-              <div class="work-projects">
-                <h2 class="project">Inspiration has no Borders</h2>
-                <p class="worktitle">Веб-сайт</p>
+              <div class="portfolio-list__projects">
+                <h2 class="portfolio-list__name">Inspiration has no Borders</h2>
+                <p class="portfolio-list__worktitle">Веб-сайт</p>
               </div>
               </a>
               </li>
-            <li class="portfolio-item">
-              <div class="portfolio-thumb">
-              <a class="portfolio-link link" href="">
+            <li class="portfolio-list__item">
+              <div class="portfolio-list__thumb">
+              <a class="portfolio-list__link link" href="">
                 <img
                 src="images/portfol7.jpg"
                 alt="Портфоліо 7"
                 height="294"
                 width="370"
               />
-              <div class="portfolio-overlay">
-                <p class="portfolio-meta">
+              <div class="portfolio-list__overlay">
+                <p class="portfolio-list__meta">
                   Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
                 </p>
                 </div>
             </div>
-              <div class="work-projects">
-                <h2 class="project">Видання Limited Edition</h2>
-                <p class="worktitle">Дизайн</p>
+              <div class="portfolio-list__projects">
+                <h2 class="portfolio-list__name">Видання Limited Edition</h2>
+                <p class="portfolio-list__worktitle">Дизайн</p>
               </div>
               </a>
               </li>
-            <li class="portfolio-item">
-              <div class="portfolio-thumb">
-              <a class="portfolio-link link" href="">
+            <li class="portfolio-list__item">
+              <div class="portfolio-list__thumb">
+              <a class="portfolio-list__link link" href="">
                 <img
                 src="images/portfol8.jpg"
                 alt="Портфоліо 8"
                 height="294"
                 width="370"
               />
-              <div class="portfolio-overlay">
-                <p class="portfolio-meta">
+              <div class="portfolio-list__overlay">
+                <p class="portfolio-list__meta">
                   Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
                 </p>
                 </div>
             </div>
-              <div class="work-projects">
-                <h2 class="project">Проєкт LAB</h2>
-                <p class="worktitle">Маркетинг</p>
+              <div class="portfolio-list__projects">
+                <h2 class="portfolio-list__name">Проєкт LAB</h2>
+                <p class="portfolio-list__worktitle">Маркетинг</p>
               </div>
               </a>
               </li>
-            <li class="portfolio-item">
-              <div class="portfolio-thumb">
-              <a class="portfolio-link link" href="">
+            <li class="portfolio-list__item">
+              <div class="portfolio-list__thumb">
+              <a class="portfolio-list__link link" href="">
                 <img
                 src="images/portfol9.jpg"
                 alt="Портфоліо 9"
                 height="294"
                 width="370"
               />
-              <div class="portfolio-overlay">
-                <p class="portfolio-meta">
+              <div class="portfolio-list__overlay">
+                <p class="portfolio-list__meta">
                   Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.
                 </p>
                 </div>
             </div>
-              <div class="work-projects">
-                <h2 class="project">Growing Business</h2>
-              <p class="worktitle">Додаток</p>
+              <div class="portfolio-list__projects">
+                <h2 class="portfolio-list__name">Growing Business</h2>
+              <p class="portfolio-list__worktitle">Додаток</p>
               </div>
               </a>
               </li>
